welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:38: error: not found: value grandmotif
      grandmotif()
      ^